Working graph extraction

--- a/nbs/export_named.ipynb
+++ b/nbs/export_named.ipynb
@@ -20,43 +20,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#export\n",
+    "# export\n",
     "\n",
     "# some line comment\n",
     "import os\n",
     "import re\n",
     "from pathlib import Path\n",
     "\n",
-    "from nbdev.export import *\n",
-    "from nbdev.export import Config, _deal_import, _from_future_import, _add2all\n",
-    "from nbformat import NotebookNode\n",
+    "import nbdev\n",
     "import nbformat\n",
-    "import nbdev"
+    "from fastcore.script import call_parse\n",
+    "from nbdev.export import (Config, _add2all, _deal_import, _from_future_import,\n",
+    "                          _is_external_export, _mk_flag_re, _re_blank_export,\n",
+    "                          _re_mod_export, check_re, export_names, extra_add,\n",
+    "                          find_default_export, get_nbdev_module,\n",
+    "                          notebook2script, read_nb, save_nbdev_module,\n",
+    "                          split_flags_and_code)\n",
+    "from nbformat import NotebookNode"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# export\n",
+    "\n",
     "_re_named_export = _mk_flag_re(\n",
     "    \"exportn_[a-zA-Z0-9:]+\\W*$\",\n",
     "    0,\n",
     "    \"Matches any line with a named #exportn without any module name\",\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 150,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    ")\n",
+    "\n",
+    "\n",
     "def extract_named_export(cell: NotebookNode):\n",
     "    name = None\n",
     "    tst = check_re(cell, _re_named_export)\n",
@@ -68,59 +69,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "nb_path = Path(os.path.join(\"test\", \"test_export.ipynb\"))\n",
     "nb = read_nb(nb_path)\n",
+    "default = find_default_export(nb[\"cells\"])\n",
     "named_exports = [ne for ne in [extract_named_export(c) for c in nb[\"cells\"]] if ne]\n",
-    "assert len(named_exports) == 3"
+    "assert len(named_exports) >= 3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cell = nbformat.v4.new_code_cell(f'#export\\n some code')\n",
-    "assert('#export' == check_re(cell, _re_blank_export).group(0))\n",
-    "cell = nbformat.v4.new_code_cell(f'#exportn_step:func\\n some code')\n",
-    "assert('#exportn_step:func' == check_re(cell, _re_named_export).group(0).strip())\n",
-    "cell = nbformat.v4.new_code_cell(f'#exportn_step:func   \\n some code')\n",
-    "assert('#exportn_step:func' == check_re(cell, _re_named_export).group(0).strip())\n",
-    "cell = nbformat.v4.new_code_cell(f'#exportn_step:func \\n some code')\n",
-    "assert('#exportn_step:func' == check_re(cell, _re_named_export).group(0).strip())"
+    "cell = nbformat.v4.new_code_cell(f\"#export\\n some code\")\n",
+    "assert \"#export\" == check_re(cell, _re_blank_export).group(0)\n",
+    "cell = nbformat.v4.new_code_cell(f\"#exportn_step:func\\n some code\")\n",
+    "assert \"#exportn_step:func\" == check_re(cell, _re_named_export).group(0).strip()\n",
+    "cell = nbformat.v4.new_code_cell(f\"#exportn_step:func   \\n some code\")\n",
+    "assert \"#exportn_step:func\" == check_re(cell, _re_named_export).group(0).strip()\n",
+    "cell = nbformat.v4.new_code_cell(f\"#exportn_step:func \\n some code\")\n",
+    "assert \"#exportn_step:func\" == check_re(cell, _re_named_export).group(0).strip()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def is_export(cell, default):\n",
-    "    \"\"\"Check if `cell` is to be exported and returns the name of the module to \n",
-    "    export it if provided\"\"\"\n",
-    "    tst = check_re(cell, _re_blank_export)\n",
-    "    if tst:\n",
-    "        if default is None:\n",
-    "            print(f\"No export destination, ignored:\\n{cell['source']}\")\n",
-    "        return default, _is_external_export(tst)\n",
-    "    tst = check_re(cell, _re_mod_export)\n",
-    "    if tst:\n",
-    "        return os.path.sep.join(tst.groups()[0].split(\".\")), _is_external_export(tst)\n",
-    "    else:\n",
-    "        return None"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 161,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# export\n",
+    "\n",
+    "\n",
     "def is_export_extended(cell, default):\n",
     "    \"\"\"Check if `cell` is to be exported and returns the name of the module \n",
     "    to export it if provided. This version adds a named export.\"\"\"\n",
@@ -143,24 +127,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "exports_extended = [e for e in [is_export_extended(c, default) for c in nb[\"cells\"]]]\n",
     "assert type(exports_extended[1][0]) == str and exports_extended[1][1]\n",
-    "orig = [e for e in [is_export(c, default) for c in nb[\"cells\"]] if e]\n",
+    "orig = [e for e in [nbdev.export.is_export(c, default) for c in nb[\"cells\"]] if e]\n",
     "new = [e for e in [is_export_extended(c, default) for c in nb[\"cells\"]] if e]\n",
-    "assert len(new) == len(orig) + 3"
+    "assert len(new) == len(orig) + 4"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def set_orig_value(fname: str, c: NotebookNode, a: bool, e: str, default: str, bare: bool = None):\n",
+    "# export\n",
+    "\n",
+    "\n",
+    "def set_orig_value(\n",
+    "    fname: str, c: NotebookNode, a: bool, e: str, default: str, bare: bool = None\n",
+    "):\n",
     "    if bare:\n",
     "        orig = \"\\n\"\n",
     "    else:\n",
@@ -180,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,16 +178,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert([set_orig_value(fname, c, False, 'top2vec', 'top2vec') for c in nb[\"cells\"]][1] == '# step:first\\n')"
+    "assert [set_orig_value(fname, c, False, \"top2vec\", \"top2vec\") for c in nb[\"cells\"]][\n",
+    "    1\n",
+    "] == \"# step:first\\n\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,24 +224,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "to_dict = {\"test_export\": [], \"module_test\": []}\n",
+    "to_dict = {\"test_export\": [], \"test_module\": []}\n",
     "reduced_nb_to_script(fname, to_dict)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "from io import StringIO\n",
+    "\n",
     "source_stream = StringIO(to_dict[\"test_export\"][0][2])\n",
-    "code_lines = [l for l in source_stream.readlines() if len(l.strip())>0]\n",
-    "assert(code_lines[0].strip() == '# step:first')"
+    "code_lines = [l for l in source_stream.readlines() if len(l.strip()) > 0]\n",
+    "assert code_lines[0].strip() == \"# step:first\""
    ]
   },
   {
@@ -262,10 +254,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# export\n",
+    "\n",
+    "\n",
     "def _sciflow_notebook2script(fname, modules, silent=False, to_dict=None, bare=False):\n",
     "    \"Finds cells starting with `#export` and puts them into a module created by `create_mod_files`\"\n",
     "    bare = str(Config().get(\"bare\", bare)) == \"True\"\n",
@@ -297,14 +292,21 @@
     "        extra, code = extra_add(flags, code)\n",
     "        code = _from_future_import(fname_out, flags, code, to_dict)\n",
     "        if a:\n",
-    "            if to_dict is None: _add2all(fname_out, [f\"'{f}'\" for f in names if '.' not in f and len(f) > 0] + extra)\n",
+    "            if to_dict is None:\n",
+    "                _add2all(\n",
+    "                    fname_out,\n",
+    "                    [f\"'{f}'\" for f in names if \".\" not in f and len(f) > 0] + extra,\n",
+    "                )\n",
     "        mod.index.update({f: fname.name for f in names})\n",
     "        code = re.sub(r\" +$\", \"\", code, flags=re.MULTILINE)\n",
     "        if code != sep + orig[:-1]:\n",
-    "            if to_dict is not None: to_dict[e].append((i, fname, code))\n",
+    "            if to_dict is not None:\n",
+    "                to_dict[e].append((i, fname, code))\n",
     "            else:\n",
-    "                with open(fname_out, 'a', encoding='utf8') as f: f.write(code)\n",
-    "        if f'{e}.py' not in mod.modules: mod.modules.append(f'{e}.py')\n",
+    "                with open(fname_out, \"a\", encoding=\"utf8\") as f:\n",
+    "                    f.write(code)\n",
+    "        if f\"{e}.py\" not in mod.modules:\n",
+    "            mod.modules.append(f\"{e}.py\")\n",
     "    save_nbdev_module(mod)\n",
     "\n",
     "    if not silent:\n",
@@ -314,43 +316,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "nbdev.export._notebook2script = _sciflow_notebook2script"
+    "# export\n",
+    "\n",
+    "\n",
+    "@call_parse\n",
+    "def sciflow_build_lib():\n",
+    "    nbdev.export._notebook2script = _sciflow_notebook2script\n",
+    "    notebook2script(recursive=True)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 209,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Converted export_named.ipynb.\n",
-      "Converted index.ipynb.\n",
-      "Converted nb_lint.ipynb.\n",
-      "Converted packaging.ipynb.\n",
-      "Converted params.ipynb.\n",
-      "Converted parse_module.ipynb.\n",
-      "Converted test_export.ipynb.\n",
-      "Converted test_module.ipynb.\n"
-     ]
-    }
-   ],
-   "source": [
-    "notebook2script(recursive=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
