--- a/nbs/parse_module.ipynb
+++ b/nbs/parse_module.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,13 +11,227 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# export\n",
+    "\n",
+    "import ast\n",
+    "import os\n",
+    "from dataclasses import asdict, dataclass\n",
+    "from pathlib import Path\n",
+    "\n",
+    "import networkx as nx\n",
+    "import pandas as pd\n",
+    "from nbdev.export import Config"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# export\n",
+    "\n",
+    "\n",
+    "def extract_step_code(\n",
+    "    module_path: Path,\n",
+    "    export_comments=(\"# cell\", \"# internal cell\", \"# comes from\"),\n",
+    "    remove_comment_lines=True,\n",
+    "):\n",
+    "    with open(module_path, \"r\") as module_file:\n",
+    "        lines = module_file.readlines()\n",
+    "    lines = pd.Series(lines)\n",
+    "    step_code = {}\n",
+    "    active_step = None\n",
+    "    for l in lines.tolist():\n",
+    "        if l.lower().startswith(\"# step\"):\n",
+    "            active_step = l.split(\":\")[1].strip()\n",
+    "        elif l.lower().startswith(export_comments):\n",
+    "            active_step = None\n",
+    "        if l.startswith(\"#\") and remove_comment_lines:\n",
+    "            continue\n",
+    "        if active_step:\n",
+    "            if not active_step in step_code:\n",
+    "                step_code[active_step] = []\n",
+    "            step_code[active_step].append(l)\n",
+    "    for key in step_code.keys():\n",
+    "        step_code[key] = \"\".join(step_code[key])\n",
+    "    return step_code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_module = os.path.join(Config().path(\"lib_path\"), \"test_export.py\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "step_code = extract_step_code(test_module)\n",
+    "step_names = step_code.keys()\n",
+    "assert [\"first\", \"preprocess\", \"train\", \"last\"] == list(step_names)\n",
+    "assert not step_code[\"first\"].startswith(\"#\")\n",
+    "assert extract_step_code(test_module, remove_comment_lines=False)[\"first\"].startswith(\n",
+    "    \"#\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class FuncLister(ast.NodeVisitor):\n",
+    "    has_return = False\n",
+    "\n",
+    "    def visit_Return(self, node):\n",
+    "        self.has_return = True\n",
+    "\n",
+    "    def visit_FunctionDef(self, node):\n",
+    "        self.name = node.name\n",
+    "        self.args = node.args.args\n",
+    "        self.arg_names = [a.arg for a in node.args.args]\n",
+    "        self.returns = node.returns\n",
+    "        self.generic_visit(node)\n",
+    "\n",
+    "\n",
+    "@dataclass\n",
+    "class FuncDetails:\n",
+    "    name: str\n",
+    "    args: str\n",
+    "    has_return: bool\n",
+    "    code: str"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# export\n",
+    "\n",
+    "\n",
+    "def parse_step(step_code: str):\n",
+    "    tree = ast.parse(step_code)\n",
+    "    lister = FuncLister()\n",
+    "    lister.visit(tree)\n",
+    "    return FuncDetails(\n",
+    "        lister.name, \",\".join(lister.arg_names), lister.returns is not None, step_code\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "valid_code_block = \"\"\"\n",
+    "def train(input_path: Path, model_path: Path):\n",
+    "    import time\n",
+    "    import pandas as pd\n",
+    "    print(f'Training {model_path} on {input_path}...')\n",
+    "    time.sleep(1)\n",
+    "\"\"\"\n",
+    "\n",
+    "invalid_code_block = \"\"\"\n",
+    "def train(input_path: Path, model_path: Path):\n",
+    "    import time\n",
+    "    import pandas as pd\n",
+    "    print(f'Training {model_path} on {input_path}...')\n",
+    "    time.slurp(1)\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "func_dets = parse_step(valid_code_block)\n",
+    "assert func_dets.name == \"train\"\n",
+    "assert func_dets.args == \",\".join([\"input_path\", \"model_path\"])\n",
+    "assert not func_dets.has_return\n",
+    "assert type(func_dets.code) == str"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# export\n",
+    "\n",
+    "\n",
     "def extract_steps(module_path: Path):\n",
-    "    with open(module_path, 'r') as mod_file:\n",
-    "        lines = mod_file.read_lines()"
+    "    step_code = extract_step_code(module_path)\n",
+    "    steps = [parse_step(step_code[k]) for k in step_code.keys()]\n",
+    "    return steps"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# export\n",
+    "\n",
+    "\n",
+    "def extract_dag(test_module: Path):\n",
+    "    steps = extract_steps(test_module)\n",
+    "\n",
+    "    node_ids = list(range(len(steps)))\n",
+    "    numbered_steps = zip(node_ids, [asdict(step) for step in steps])\n",
+    "\n",
+    "    dag = nx.Graph()\n",
+    "    dag.add_nodes_from(numbered_steps)\n",
+    "    dag.add_edges_from(list(zip(node_ids, node_ids[1:])))\n",
+    "    return dag"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dag = extract_dag(test_module)\n",
+    "assert [(0, 1), (1, 2), (2, 3)] == list(dag.edges)\n",
+    "assert [0, 1, 2, 3] == list(dag.nodes)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Write out Test Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nx.write_graphml_lxml(\n",
+    "    dag, os.path.join(Path(\".\").resolve(), \"test\", \"test_dag.graphml\")\n",
+    ")\n",
+    "nx.write_gml(dag, os.path.join(Path(\".\").resolve(), \"test\", \"test_dag.gml\"))"
    ]
   },
   {
@@ -25,49 +239,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "module_path = os.path.join(Config().path(\"lib_path\"), \"test_export.py\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open(module_path, 'r') as mod_file:\n",
-    "        lines = mod_file.readlines()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "special_comments = ('# cell', '# internal cell', '# comes from', '# step')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lines = pd.Series(lines)\n",
-    "step_code = {}\n",
-    "active_step = None\n",
-    "for l in lines.tolist():\n",
-    "    if l.lower().startswith('# step'):\n",
-    "        active_step = l.split(':')[1].strip()\n",
-    "    elif l.lower().startswith('# cell'):\n",
-    "        active_step = None\n",
-    "    if active_step:\n",
-    "        if not active_step in step_code:\n",
-    "            step_code[active_step] = []\n",
-    "        step_code[active_step].append(l)\n",
-    "print('\\n'.join(step_code['first']).strip())"
-   ]
+   "source": []
   }
  ],
  "metadata": {
