--- a/nbs/test/test_module.ipynb
+++ b/nbs/test/test_module.ipynb
@@ -18,8 +18,9 @@
     "# exportn_step:first\n",
     "from typing import List\n",
     "\n",
+    "\n",
     "def first(some_params: List[str]):\n",
-    "    print(''.join(some_params))\n",
+    "    print(\"\".join(some_params))\n",
     "    return len(some_params)"
    ]
   },
@@ -38,7 +39,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# exporti \n",
+    "# exporti\n",
     "\n",
     "internal = True"
    ]
@@ -49,7 +50,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# exports \n",
+    "# exports\n",
     "\n",
     "source_in_docs = True"
    ]
