--- a/nbs/test/test_export.ipynb
+++ b/nbs/test/test_export.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,18 +19,19 @@
     "# irrelevant comment\n",
     "from typing import List\n",
     "\n",
+    "\n",
     "def first(some_params: List[str]):\n",
-    "    print(''.join(some_params))\n",
+    "    print(\"\".join(some_params))\n",
     "    return len(some_params)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#export \n",
+    "# export\n",
     "# some other comment\n",
     "def function():\n",
     "    return 1"
@@ -44,7 +45,7 @@
    "source": [
     "# export test_module\n",
     "\n",
-    "created_new_module =True"
+    "created_new_module = True"
    ]
   },
   {
@@ -53,7 +54,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# exporti \n",
+    "# exporti\n",
     "\n",
     "internal = True"
    ]
@@ -64,7 +65,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# exports \n",
+    "# exportn_step:preprocess\n",
+    "def preprocess(input_path: Path):\n",
+    "    import time\n",
+    "\n",
+    "    print(f\"Preprocessing input data from {input_path}...\")\n",
+    "    time.sleep(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# exports\n",
     "\n",
     "source_in_docs = True"
    ]
@@ -75,8 +90,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#export\n",
+    "# export\n",
     "import time\n",
+    "\n",
     "time.sleep(1)"
    ]
   },
@@ -87,6 +103,7 @@
    "outputs": [],
    "source": [
     "import time\n",
+    "\n",
     "time.sleep(2)"
    ]
   },
@@ -96,9 +113,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "#export\n",
+    "# export\n",
     "import time\n",
+    "\n",
     "time.sleep(3)"
    ]
   },
@@ -109,10 +126,10 @@
    "outputs": [],
    "source": [
     "# exportn_step:train\n",
-    "import time\n",
     "def train(input_path: Path, model_path: Path):\n",
-    "    import pandas as pd\n",
-    "    print(f'Training {model_path} on {input_path}...')\n",
+    "    import time\n",
+    "\n",
+    "    print(f\"Training {model_path} on {input_path}...\")\n",
     "    time.sleep(1)"
    ]
   },
@@ -178,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
