Added conda meta.yaml generation

--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -13,9 +13,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Text Discovery\n",
+    "# Sciflow\n",
     "\n",
-    "> This library provides functions that help you mine large corpora of text data. "
+    "> This library bridges the gap between research and production for Data Science. The exploration driven development is a different paradigm to most software engineering exercises. We start by assuming only that there are high levels of uncertainty and that the code needs not only to work but to be well conditioned to real data. `sciflow` mixes the strengths of the notebook environment: flexibility, access to data and constant feedback with the strengths of production-like workflows: resilience and dedicated compute."
    ]
   },
   {
@@ -47,19 +47,28 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Fill me in please! Don't forget code examples:"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "1 + 1"
+    "# Commands\n",
+    "       \n",
+    "* nbdev_diff_nbs                   \n",
+    "* nbdev_fix_merge          \n",
+    "* nbdev_test_nbs  \n",
+    "* nbdev_clean_nbs                                  \n",
+    "* nbdev_new     \n",
+    "* sciflow_tidy\n",
+    "* sciflow_build_lib\n",
+    "* sciflow_package\n",
+    "* sciflow_build\n",
+    "* sciflow_release"
    ]
   },
   {
