--- a/nbs/packaging.ipynb
+++ b/nbs/packaging.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,23 +56,15 @@
     "from pathlib import Path\n",
     "from typing import List\n",
     "from configparser import ConfigParser\n",
-    "from nbdev.export import Config"
+    "from nbdev.export import Config\n",
+    "import yaml"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -80,16 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# TODO: Need to generate meta.yaml from settings.ini"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,12 +105,34 @@
     "    err = output.stderr\n",
     "\n",
     "    if output_code != 0:\n",
-    "        raise EnvironmentError(err)"
+    "        raise EnvironmentError(err)\n",
+    "        \n",
+    "    return reqs_file_to_sep_str(os.path.join(project_root, generated_pip_file_name))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'fastcore==1.3.19 nbdev==1.1.12 nbformat==5.0.8 nbqa==0.5.6 networkx==2.5 pandas==0.25.3'"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "determine_dependencies()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,13 +230,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
     "def update_requirements(output_filename: str = \"settings.ini\"):\n",
     "    config = ConfigParser(delimiters=[\"=\"])\n",
-    "    settings_path = os.path.join(Config().path(\"lib_path\"), \"settings.ini\")\n",
+    "    settings_path = os.path.join(Path(\".\").resolve().parent, \"settings.ini\")\n",
     "    config.read(settings_path)\n",
     "\n",
     "    generated_reqs_path = os.path.join(\n",
@@ -250,11 +255,131 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
-    "update_requirements()"
+    "test_outfile = os.path.join(Path(\".\").resolve().parent, \"settings.ini\")\n",
+    "update_requirements(test_outfile)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "config = ConfigParser(delimiters=[\"=\"])\n",
+    "config.read(test_outfile)\n",
+    "assert('nbdev' in config.get(\"DEFAULT\", \"requirements\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "required_keys = (\n",
+    "'lib_name',\n",
+    "'description',\n",
+    "'version',\n",
+    "'custom_sidebar',\n",
+    "'license',\n",
+    "'status',\n",
+    "'console_scripts',\n",
+    "'nbs_path',\n",
+    "'lib_path',\n",
+    "'title',\n",
+    "'tst_flags')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert(all([config.get(\"DEFAULT\", k) is not None for k in required_keys]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Create conda build file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "package:\n",
+      "  name: sciflow\n",
+      "  version: 0.0.1\n",
+      "requirements:\n",
+      "  host:\n",
+      "  - pip\n",
+      "  - python\n",
+      "  - setuptools\n",
+      "  run:\n",
+      "  - fastcore==1.3.19\n",
+      "  - nbdev==1.1.12\n",
+      "  - nbformat==5.0.8\n",
+      "  - nbqa==0.5.6\n",
+      "  - networkx==2.5\n",
+      "  - pandas==0.25.3\n",
+      "source:\n",
+      "  path: /home/jovyan/git/sciflow\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(yaml.dump(meta_data))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_conda_meta_file(out_dir: Path, out_file: str = \"meta.yaml\"):\n",
+    "    meta_data  = {'package': \n",
+    "              {\n",
+    "                  'name': Config().get('lib_name'),\n",
+    "                  'version': Config().get('version')\n",
+    "              },\n",
+    "              'source': {'path': str(Config().path('lib_path').resolve().parent)},\n",
+    "              'requirements': {\n",
+    "                  'host': ['pip', 'python', 'setuptools'],\n",
+    "                  'run': determine_dependencies().split(' ')\n",
+    "              },\n",
+    "             }\n",
+    "    with open(os.path.join(out_dir, out_file), 'w') as conda_build_file:\n",
+    "        yaml.dump(meta_data, conda_build_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "create_conda_meta_file(Path('.'))"
    ]
   },
   {
