--- a/nbs/params.ipynb
+++ b/nbs/params.ipynb
@@ -16,21 +16,15 @@
    "source": [
     "# Notebook Parameter Management\n",
     "\n",
-    "Having the ability to parameterise notebook executions is very useful.."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Notebook utilities \n",
+    "Parameterised notebooks can be used to:\n",
     "\n",
-    "> Used to create & access the parameters cell."
+    "* Parallelise your workflow: run the notebook you are working on but with a different parameter set\n",
+    "* Different context: execute from a script or scheduled job instead of the Web Browser. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,6 +33,7 @@
     "from io import StringIO\n",
     "from pathlib import Path\n",
     "from typing import Iterable\n",
+    "import os\n",
     "\n",
     "import nbformat\n",
     "from nbdev.export import Config, find_default_export, nbglob, read_nb\n",
@@ -47,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,18 +75,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "\n",
     "test_nb = os.path.join(Path(\".\").resolve(), \"test\", \"test_export.ipynb\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -124,10 +117,11 @@
      "text": [
       "# export\n",
       "\n",
-      "some_params = [1,2,3]\n",
-      "some_params = 'test'\n",
-      "input_path = Path('.')\n",
-      "model_path = Path('.').resolve().parent\n"
+      "# TODO: only dealing with simple params for now - scalars & string values\n",
+      "some_params = len([1, 2, 3])\n",
+      "some_param = \"test\"\n",
+      "input_path = str(Path(\".\").resolve())\n",
+      "model_path = str(Path(\".\").resolve().parent)\n"
      ]
     }
    ],
@@ -137,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
